--- a/home/index.html
+++ b/home/index.html
@@ -17,6 +17,7 @@
         rel="stylesheet">
     <!-- header -->
     <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -42,11 +43,11 @@
             <div class="signIn">
                 <div class="signIn__wrap">
                     <div class="logIn">Log In</div>
-                <div class="signUp">
-                    <button class="signUp__btn btn">
-                        Sign Up
-                    </button>
-                </div>
+                    <div class="signUp">
+                        <button class="signUp__btn btn">
+                            Sign Up
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="user unactive">
@@ -120,9 +121,9 @@
         </div>
     </div>
     <main class="main">
-        <div id="product-list" class="content"></div>
-
-
+        <div class="heading">
+        
+        </div>
     </main>
 
     <script src="../assets/js/SignIn.js"></script>
